# store-platform

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml  release-artifacts.yml
apps/owner-web/: index.html  package.json  vite.config.ts
apps/platform-admin/: package.json  vite.config.ts
apps/store-desktop/: index.html  package.json  (+1 more)
apps/store-desktop/src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
apps/store-desktop/src-tauri/release-profiles/: dev.json  prod.json  staging.json
apps/store-desktop/src-tauri/src/: lib.rs  main.rs  runtime_cache.rs  runtime_cash_drawer.rs  runtime_continuity.rs  runtime_control_plane_origin.rs  runtime_customer_display.rs  runtime_hardware.rs  runtime_hub_identity.rs  runtime_hub_service.rs  runtime_local_auth.rs  runtime_paths.rs  runtime_printer.rs  runtime_release.rs  runtime_scale.rs  runtime_scanner.rs  runtime_session.rs  runtime_shell.rs  runtime_spoke_registry.rs  runtime_updater.rs
docs/: API_CONTRACT_MATRIX.md  DOCS_INDEX.md  HANDOFF_TEMPLATE.md  PROJECT_CONTEXT.md  STORE_CANONICAL_BLUEPRINT.md  TASK_LEDGER.md  WORKLOG.md
scripts/: build-store-desktop-release.mjs  generate-store-desktop-update-manifest.mjs  generate-store-desktop-update-manifest.test.mjs  github-workflows.test.mjs  package-control-plane-release.mjs  package-control-plane-release.test.mjs  package-web-release.mjs  package-web-release.test.mjs  release-archive-utils.mjs  run-store-mobile-gradle.mjs  stage-store-desktop-release-artifacts.mjs  stage-store-desktop-release-artifacts.test.mjs
(+985 files in other folders)
